; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_parseint.c_isc_parse_uint16.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_parseint.c_isc_parse_uint16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISC_R_SUCCESS = common dso_local global i64 0, align 8
@ISC_R_RANGE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @isc_parse_uint16(i64* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i64* %0, i64** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @isc_parse_uint32(i32* %8, i8* %10, i32 %11)
  store i64 %12, i64* %9, align 8
  %13 = load i64, i64* %9, align 8
  %14 = load i64, i64* @ISC_R_SUCCESS, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i64, i64* %9, align 8
  store i64 %17, i64* %4, align 8
  br label %28

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  %20 = icmp sgt i32 %19, 65535
  br i1 %20, label %21, label %23

21:                                               ; preds = %18
  %22 = load i64, i64* @ISC_R_RANGE, align 8
  store i64 %22, i64* %4, align 8
  br label %28

23:                                               ; preds = %18
  %24 = load i32, i32* %8, align 4
  %25 = sext i32 %24 to i64
  %26 = load i64*, i64** %5, align 8
  store i64 %25, i64* %26, align 8
  %27 = load i64, i64* @ISC_R_SUCCESS, align 8
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %23, %21, %16
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i64 @isc_parse_uint32(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
